Revision history for Geo-Location

{{$NEXT}}

0.0.3  2021-12-10T08:31:09-06:00
    - Publish to Zef repo

0.0.2  2021-11-02T16:08:44-05:00
    - Add the C<:bare> parameter to location methods to strip the
      string to just the two latitude/longitude values
      separated by a single space
    - Add appropriate new tests

0.0.1  2021-10-26T14:57:44-05:00
    - Initial version