@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/tbrowder/Geo-Location/workflows/test/badge.svg)](https://github.com/tbrowder/Geo-Location/actions)
+[![Actions Status](https://github.com/tbrowder/Geo-Location/actions/workflows/linux.yml/badge.svg)](https://github.com/tbrowder/Geo-Location/actions) [![Actions Status](https://github.com/tbrowder/Geo-Location/actions/workflows/macos.yml/badge.svg)](https://github.com/tbrowder/Geo-Location/actions) [![Actions Status](https://github.com/tbrowder/Geo-Location/actions/workflows/windows.yml/badge.svg)](https://github.com/tbrowder/Geo-Location/actions)
 
 NAME
 ====
@@ -159,12 +159,12 @@ To Do
 AUTHOR
 ======
 
-Tom Browder `tom.browder@cpan.org`
+Tom Browder `tbrowder@acm.org`
 
 COPYRIGHT AND LICENSE
 =====================
 
-© 2021 Tom Browder
+© 2021-2024 Tom Browder
 
 This library is free software; you may redistribute it or modify it under the Artistic License 2.0.
 
