@@ -4,10 +4,12 @@ name = Geo-Location
 
 [ReadmeFromPod]
 enable = true
-filename = docs/README.pod
+filename = docs/README.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
