@@ -220,11 +220,11 @@ say $loc.location(:format('rst'), :bare);
 
 =head1 AUTHOR
 
-Tom Browder C<tom.browder@cpan.org>
+Tom Browder C<tbrowder@acm.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-E<0x00a9> 2021 Tom Browder
+E<0x00a9> 2021-2024 Tom Browder
 
 This library is free software; you may redistribute it or modify it under the Artistic License 2.0.
 
